<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unlinked</string>
    <string name="menu_settings">Settings</string>
    <string name="protocol_testing">Protocol Testings</string>

    <!-- Contact Layout Strings -->
    <string name="profile_image_desc">Profile Image</string>
    <string name="ic_identity_desc">Exchange Identities</string>
    <string name="ic_messaging_desc">Start Messaging</string>
    <string name="number_of_contacts">%1$d common contacts</string>
    <string name="anonomous_name">Anonomous</string>
    
    <!--  Header Strings -->
    <string name="active_interactions">Active Interactions</string>
    <string name="past_interactions">Past Interactions</string>

    <!-- Preference Developer values -->
    <string name="pref_developer_title">Developer Settings</string>
    <string name="pref_launch_result_key">pref_launch_result</string>
    <string name="pref_launch_result_title">Launch Contact Result</string>
    <string name="pref_launch_result_summary">See an example contact result.</string>
    <string name="pref_launch_contacts_key">pref_launch_contacts</string>
    <string name="pref_launch_contacts_title">Launch All Contacts</string>
    <string name="pref_launch_contacts_summary">See all contacts</string>
    <string name="pref_clear_interactions_key">pref_clear_interactions</string>
    <string name="pref_clear_interactions_title">Clear Interactions</string>
    <string name="pref_clear_interactions_summary">Clear the database of any previous interactions.</string>
    <string name="pref_clear_cache_key">pref_clear_cache</string>
    <string name="pref_clear_cache_title">Clear All Device Caches</string>
    <string name="pref_clear_cache_summary">Allow connections to any bluetooth device.</string>
    <string name="pref_clear_cache_peers_key">pref_clear_cache_peers</string>
    <string name="pref_clear_cache_peers_title">Clear Peer Device Cache</string>
    <string name="pref_clear_cache_peers_summary">Allow connections to the same peer(our app) device.</string>
    <string name="pref_add_notification_key">pref_add_notification</string>
    <string name="pref_add_notification_title">Add a notification</string>
    <string name="pref_add_notification_summary">Test expanding/collapsing notifications.</string>
    
    <!-- radio button values for protocol testing -->
    <string name="rb_psica">PSICA</string>
    <string name="rb_b_psi">Bearer PSI</string>
    <string name="rb_b_bf_psi">Bearer Capabilities Bloom Filter PSI</string>
    <string name="rb_b_bf_psica">Bearer Capabilities Bloom Filter PSICA</string>
    <string name="rb_b_psica">Bearer Capabilities PSICA (without BF)</string>
    <string name="rb_b_bf_psi_no_v">Bearer Bloom Filter Capabilities Bloom Filter PSI without verification</string>
    <string name="rb_atwpsi">Authorized Two-way PSI</string>
    <string name="rb_atwpsica_new">Authorized Two-way PSICA (more efficient)</string>
    <string name="rb_atwpsica">Authorized Two-way PSICA</string>

</resources>