<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <PreferenceCategory
        android:title="@string/pref_developer_title">
        <Preference
            android:key="@string/pref_launch_result_key"
            android:title="@string/pref_launch_result_title"
            android:summary="@string/pref_launch_result_summary"/>
        <Preference
            android:key="@string/pref_launch_contacts_key"
            android:title="@string/pref_launch_contacts_title"
            android:summary="@string/pref_launch_contacts_summary"/>
        <Preference
            android:key="@string/pref_clear_cache_key"
            android:title="@string/pref_clear_cache_title"
            android:summary="@string/pref_clear_cache_summary"/>
        <Preference
            android:key="@string/pref_clear_cache_peers_key"
            android:title="@string/pref_clear_cache_peers_title"
            android:summary="@string/pref_clear_cache_peers_summary"/>
        <Preference
            android:key="@string/pref_clear_interactions_key"
            android:title="@string/pref_clear_interactions_title"
            android:summary="@string/pref_clear_interactions_summary"/>
    </PreferenceCategory>

</PreferenceScreen>
