<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants" >
    
    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:padding="4dp"
        android:src="@drawable/ic_profile_image"
        android:contentDescription="@string/profile_image_desc"
        />
    <TextView
        android:id="@+id/displayName"
        android:layout_toRightOf="@+id/contactImage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:text="Sample Name"
        android:textSize="20sp" />
    
    <TextView 
        android:id="@+id/contactsSize"
        android:textSize="12sp"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_contacts"
        android:layout_below="@+id/displayName"
        android:layout_toRightOf="@+id/contactImage"/>
    
    <ImageButton
       android:id="@+id/exchangeIdentity"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginRight="1dp"
       android:contentDescription="@string/ic_identity_desc"
       android:src="@drawable/ic_menu_invite"
       android:layout_toLeftOf="@+id/startMessaging"
       android:layout_centerVertical="true" />
    
    <ImageButton
       android:id="@+id/startMessaging"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginRight="1dp"
       android:layout_alignParentRight="true"
       android:contentDescription="@string/ic_messaging_desc"
       android:src="@drawable/ic_menu_start_conversation"
       android:layout_centerVertical="true" />
</RelativeLayout>
